--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html,body{
 header{ 
     max-width: 100%;
     width: 100%;
-    height: 300px;
+    height: 7ex;
     margin: 0px;
     background-image: url("../mare-ge1cdd23fe_1280.jpg");
     background-position:center;
@@ -17,6 +17,7 @@ header{
     background-attachment: scroll;
     margin-top: 5%;
     background-size: 100%;
+    background-attachment:scroll;
 }
 p{
     padding-left: 1.5em;
